fix page overflow

--- a/mini-project/src/App.css
+++ b/mini-project/src/App.css
@@ -2,12 +2,13 @@
 
 .App {
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: black;
   font-family: "Neucha", cursive;
+  overflow:auto;
 }
 
 .heading {
@@ -24,4 +25,11 @@
     margin: 15px 0;
     font-size: 35px;
   }
+}
+
+@media (max-height: 100vh) {
+  .App {
+    height: 100vh;
+  }
+  
 }
